static/css/main.css
/* General */
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}
/* Header */
.logo {
  display: inline-block;
  font-size: 30px;
  color: azure;
  padding-left: 20px;
}
.logo a{
    text-decoration: none;
    color: white;
}
.logo a:hover{
    color: black;
}
nav {
  width: 100%;
  height: 60px;
  background-color: rgb(167, 34, 127);
  padding: 0;
  line-height: 2;
}
.nav-item {
  display: inline-block;
  text-align: center;
  padding-left: 10px;
}
.nav-item a{
    text-decoration: none;
    color: white;
}
.nav-item a:hover{
    color: black;
}
.navbar-list {
  padding: 0px;
  float: right;
}
.nav-links {
  font-size: 30px;
  float: right;
  padding-right: 20px;
}

/* Body */
body{
    overflow: none;
}
.header{
    padding: 20px;
    width: 100%;
    height: auto;
}
.hdr-img{
    width: 75%;
    margin-left: 12.5%;
    height: 600px;
}
.slogan{
    position: absolute;
    top: 40%;
    width: 100%;
    text-align: center;
    color: white;
    font-size: 60px;
    font-style: italic;
    opacity: 0.7;
}

/* Footer */
/* Media Queries */

